rust/bindings/adbc.rs

    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).DatabaseSetOptionDouble) as usize - ptr as usize
        },
        296usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(DatabaseSetOptionDouble),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).DatabaseSetOptionInt) as usize - ptr as usize
        },
        304usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(DatabaseSetOptionInt),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ConnectionCancel) as usize - ptr as usize },
        312usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionCancel),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetOption) as usize - ptr as usize
        },
        320usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetOption),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetOptionBytes) as usize - ptr as usize
        },
        328usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetOptionBytes),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetOptionDouble) as usize
                - ptr as usize
        },
        336usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetOptionDouble),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetOptionInt) as usize - ptr as usize
        },
        344usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetOptionInt),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetStatistics) as usize - ptr as usize
        },
        352usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetStatistics),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionGetStatisticNames) as usize
                - ptr as usize
        },
        360usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionGetStatisticNames),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionSetOptionBytes) as usize - ptr as usize
        },
        368usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionSetOptionBytes),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionSetOptionDouble) as usize
                - ptr as usize
        },
        376usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionSetOptionDouble),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).ConnectionSetOptionInt) as usize - ptr as usize
        },
        384usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(ConnectionSetOptionInt),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).StatementCancel) as usize - ptr as usize },
        392usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementCancel),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementExecuteSchema) as usize - ptr as usize
        },
        400usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementExecuteSchema),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementGetOption) as usize - ptr as usize
        },
        408usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementGetOption),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementGetOptionBytes) as usize - ptr as usize
        },
        416usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementGetOptionBytes),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementGetOptionDouble) as usize - ptr as usize
        },
        424usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementGetOptionDouble),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementGetOptionInt) as usize - ptr as usize
        },
        432usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementGetOptionInt),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementSetOptionBytes) as usize - ptr as usize
        },
        440usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementSetOptionBytes),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementSetOptionDouble) as usize - ptr as usize
        },
        448usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementSetOptionDouble),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).StatementSetOptionInt) as usize - ptr as usize
        },
        456usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDriver),
            "::",
            stringify!(StatementSetOptionInt),
        ),
    );
}
extern "C" {
    /**Allocate a new (but uninitialized) database.

 Callers pass in a zero-initialized AdbcDatabase.

 Drivers should allocate their internal data structure and set the private_data
 field to point to the newly allocated struct. This struct should be released
 when AdbcDatabaseRelease is called.*/
    pub fn AdbcDatabaseNew(
        database: *mut AdbcDatabase,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a string option of the database.

 This must always be thread-safe (other operations are not), though
 given the semantics here, it is not recommended to call GetOption
 concurrently with itself.

 length must be provided and must be the size of the buffer pointed
 to by value. If there is sufficient space, the driver will copy
 the option value (including the null terminator) to buffer and set
 length to the size of the actual value. If the buffer is too
 small, no data will be written and length will be set to the
 required length.

 In other words:

 - If output length <= input length, value will contain a value
 with length bytes.
 - If output length > input length, nothing has been written to
 value.

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `database` (direction in) - The database.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The length of value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcDatabaseGetOption(
        database: *mut AdbcDatabase,
        key: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_char,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a bytestring option of the database.

 This must always be thread-safe (other operations are not), though
 given the semantics here, it is not recommended to call
 GetOptionBytes concurrently with itself.

 length must be provided and must be the size of the buffer pointed
 to by value. If there is sufficient space, the driver will copy
 the option value to buffer and set length to the size of the
 actual value. If the buffer is too small, no data will be written
 and length will be set to the required length.

 In other words:

 - If output length <= input length, value will contain a value
 with length bytes.
 - If output length > input length, nothing has been written to
 value.

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `database` (direction in) - The database.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The option value length.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcDatabaseGetOptionBytes(
        database: *mut AdbcDatabase,
        key: *const ::std::os::raw::c_char,
        value: *mut u8,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a double option of the database.

 This must always be thread-safe (other operations are not).

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the double
 representation of an integer option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `database` (direction in) - The database.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcDatabaseGetOptionDouble(
        database: *mut AdbcDatabase,
        key: *const ::std::os::raw::c_char,
        value: *mut f64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get an integer option of the database.

 This must always be thread-safe (other operations are not).
